refactor: Modularize Superadmin Tenants and Users UI components
- Further modularized Superadmin Tenants and Users pages into dedicated Svelte components for improved structure and maintainability.

- Updated internationalization files with new keys for request metrics title.

- Removed task tracking document as development phases are complete.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -466,6 +466,11 @@
                 }
             }
         },
+        "system": {
+            "request_metrics": {
+                "title": "Request Metrics"
+            }
+        },
         "audit_logs": {
             "title": "Audit Logs",
             "subtitle": "Track system activity and security events",
