--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -466,6 +466,11 @@
                 }
             }
         },
+        "system": {
+            "request_metrics": {
+                "title": "Metrik Permintaan"
+            }
+        },
         "audit_logs": {
             "title": "Log Audit",
             "subtitle": "Lacak aktivitas sistem dan event keamanan",
