feat: implement comprehensive backup system and enhance payment/UI security
- Backend: Added BackupService with scheduled backups and ZIP compression support.
- Backend: Enhanced Midtrans payment status handling and notification validation.
- Backend: Seeded new 'backups' permissions and added backup HTTP/Tauri routes.
- Frontend: Implemented Backups UI for Superadmin and Tenant Admin.
- Frontend: Improved payment checkout with auto-polling and robust script loading.
- Frontend: Added 'Select All' for roles and refined Sidebar navigation.
- Security: Updated CSP for Midtrans and fixed missing 2FA verification call.
- Misc: Fixed i18n locale normalization and cleaned up temporary check files.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -343,6 +343,7 @@
         "storage": "Storage",
         "subscription": "Subscription",
         "audit_logs": "Audit Logs",
+        "backups": "Backups",
         "system": "System",
         "expand": "Expand sidebar",
         "collapse": "Collapse sidebar",
