--- a/src/lib/i18n/locales/id.json
+++ b/src/lib/i18n/locales/id.json
@@ -343,6 +343,7 @@
         "storage": "Penyimpanan",
         "subscription": "Langganan",
         "audit_logs": "Log Audit",
+        "backups": "Cadangan",
         "system": "Sistem",
         "expand": "Perluas sidebar",
         "collapse": "Ciutkan sidebar",
