feat: robust system diagnostics, seeding utilities, and documentation update
- Backend: Added SystemDiagnostics struct and service methods for comprehensive health checks (DB, Disk, RAM).
- Backend: Implemented src-tauri/src/bin/seed.rs and db/seed.rs for automated database seeding and factory data generation.
- Backend: Removed archived migration files to keep the repository clean.
- Frontend: Created SystemDiagnosticsPanel component for real-time system health visualization.
- Frontend: Integrated system diagnostics API into the Superadmin System dashboard.
- Docs: Updated README.md with new setup, migration, and seeding instructions.
- Dev: Updated package.json with new seed and migrate scripts.

--- a/src/lib/i18n/locales/en.json
+++ b/src/lib/i18n/locales/en.json
@@ -96,6 +96,8 @@
     "cancel": "Cancel",
     "clear": "Clear",
     "close": "Close",
+    "copied": "Copied",
+    "copy_failed": "Copy failed",
     "delete": "Delete",
     "edit": "Edit",
     "download": "Download",
@@ -801,6 +803,21 @@
       }
     },
     "system": {
+      "tabs": {
+        "health": "Health",
+        "diagnostics": "Diagnostics"
+      },
+      "diagnostics": {
+        "loading": "Loading diagnostics...",
+        "database": "Database",
+        "migrations": "Migrations",
+        "applied": "Applied",
+        "resolved": "Resolved",
+        "show_applied": "Show applied migrations",
+        "platform": "Platform Settings",
+        "backups": "Backups",
+        "collected_at": "Collected at:"
+      },
       "request_metrics": {
         "title": "Request Metrics"
       },
